@@ -1,2 +1,3 @@
 # iMAT
 vi fixar fet mat app
+"vmArgs": "--module-path \"C:\\Users\\David\\LanguagesPrograming\\JavaFx17\\javafx-sdk-17.0.6\\lib\" --add-modules javafx.controls,javafx.fxml"
